k8s/otel/fp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    meta.helm.sh/release-name: my-otel-demo
    meta.helm.sh/release-namespace: otel-demo
  creationTimestamp: "2026-04-26T02:40:01Z"
  generation: 3
  labels:
    app.kubernetes.io/component: frontend-proxy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frontend-proxy
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/version: 2.2.0
    helm.sh/chart: opentelemetry-demo-0.40.7
    opentelemetry.io/name: frontend-proxy
  name: frontend-proxy
  namespace: otel-demo
  resourceVersion: "5290954"
  uid: 52ff440f-af53-472b-a8ac-2e1cab1270f6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      opentelemetry.io/name: frontend-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        io.opentelemetry.discovery.metrics/config: |
          targets:
            - endpoint: "http://`endpoint`"
        io.opentelemetry.discovery.metrics/enabled: "true"
        io.opentelemetry.discovery.metrics/scraper: httpcheck
        resource.opentelemetry.io/service.namespace: otel-demo
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: frontend-proxy
        app.kubernetes.io/name: frontend-proxy
        app.kubernetes.io/version: 2.2.0
        opentelemetry.io/name: frontend-proxy
    spec:
      containers:
      - env:
        - name: OTEL_SERVICE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels['app.kubernetes.io/component']
        - name: OTEL_COLLECTOR_NAME
          value: otel-collector
        - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
          value: cumulative
        - name: ENVOY_PORT
          value: "8080"
        - name: ENVOY_ADDR
          value: 0.0.0.0
        - name: ENVOY_ADMIN_PORT
          value: "10000"
        - name: FLAGD_HOST
          value: flagd
        - name: FLAGD_PORT
          value: "8013"
        - name: FLAGD_UI_HOST
          value: flagd
        - name: FLAGD_UI_PORT
          value: "4000"
        - name: FRONTEND_HOST
          value: frontend
        - name: FRONTEND_PORT
          value: "8080"
        - name: GRAFANA_HOST
          value: grafana
        - name: GRAFANA_PORT
          value: "80"
        - name: IMAGE_PROVIDER_HOST
          value: image-provider
        - name: IMAGE_PROVIDER_PORT
          value: "8081"
        - name: JAEGER_HOST
          value: jaeger
        - name: JAEGER_UI_PORT
          value: "16686"
        - name: LOCUST_WEB_HOST
          value: load-generator
        - name: LOCUST_WEB_PORT
          value: "8089"
        - name: OTEL_COLLECTOR_HOST
          value: $(OTEL_COLLECTOR_NAME)
        - name: OTEL_COLLECTOR_PORT_GRPC
          value: "4317"
        - name: OTEL_COLLECTOR_PORT_HTTP
          value: "4318"
        - name: ENVOY_DNS_LOOKUP_FAMILY
          value: V4_ONLY
        image: ghcr.io/open-telemetry/demo:2.2.0-frontend-proxy
        imagePullPolicy: IfNotPresent
        name: frontend-proxy
        ports:
        - containerPort: 8080
          name: service
          protocol: TCP
        resources:
          limits:
            memory: 65Mi
        securityContext:
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: my-otel-demo
      serviceAccountName: my-otel-demo
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-26T02:45:41Z"
    lastUpdateTime: "2026-04-26T02:45:41Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-26T02:40:02Z"
    lastUpdateTime: "2026-04-26T02:48:25Z"
    message: ReplicaSet "frontend-proxy-84b54c557d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
