k8s/otel/otel-collector-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: otel-demo
spec:
  type: ExternalName
  externalName: otel-collector.opentelemetry.svc.cluster.local
  ports:
  - port: 4317
    name: otlp-grpc
    protocol: TCP
  - port: 4318
    name: otlp-http
    protocol: TCP
